--- a/dto-assembler-test-demo/src/main/resources/i18n/messages_zh_CN.properties
+++ b/dto-assembler-test-demo/src/main/resources/i18n/messages_zh_CN.properties
@@ -1,4 +1,6 @@
-0=\u6210\u529F
-9999=\u7CFB\u7EDF\u5F02\u5E38
-2001=\u8BE5\u5305\u4E0D\u5B58\u5728,\u8BF7\u68C0\u67E5\u5305\u8DEF\u5F84\u201C{0}\u201D\u662F\u5426\u6B63\u786E
-BusinessError=\u7CFB\u7EDF\u4E1A\u52A1\u5F02\u5E38
+success=\u6210\u529F
+system.error=\u7CFB\u7EDF\u4E1A\u52A1\u5F02\u5E38
+parameter.error=\u53C2\u6570\u5F02\u5E38\uFF0C\u53C2\u6570\u540D\uFF1A{0}
+cause.error=\u6570\u636E\u4E0D\u6B63\u786E\uFF0C\u5F02\u5E38\uFF1A{0}
+parameter=\u9519\u8BEF\u53C2\u6570
+sql=sql\u5F02\u5E38
